added 2 pages with tabs and 2 pop-up

--- a/src/index.html
+++ b/src/index.html
@@ -71,12 +71,145 @@
                 <p>CustomerLab is the best affiliate network to get new clients.CustomerLab is the best affiliate network to get new clients.</p>
             </div>
             <div class="buttons">
-                <a href="">Get Started</a>
-                <a href="">Book A Demo</a>
+                <a class="" data-toggle="modal" data-target="#get-started" >Get Started</a>
+                <a class="" data-toggle="modal" data-target="#book-demo" >Book A Demo</a>
             </div>
         </div>
     </div>
 </section>
+
+<!-- Modal -->
+<div class="modal fade" id="get-started" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <section id="pop-up">
+                <div class="image">
+                    <img src="src/acetss/pop-up.png" alt="">
+                </div>
+                <div class="info">
+                    <div class="phone">
+                        <div class="button">
+                            <div class="button-img">
+                                <img src="src/acetss/contact-phone.svg" alt="">
+                            </div>
+                        </div>
+                        <h2>Let's talk</h2>
+                        <p class="subtitle">Everythig will start now</p>
+                    </div>
+                    <div class="get-started">
+                        <h2>Get started</h2>
+                        <div class="form">
+                            <form>
+                                <div id="information">
+                                    <div class="one-input name">
+                                        <label>
+                                            <p class="title">First name</p>
+                                            <p><span class="wpcf7-form-control-wrap text"><input type="text" name="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                            </p>
+                                        </label>
+                                    </div>
+                                    <div class="one-input email">
+                                        <label>
+                                            <p class="title">Email</p>
+                                            <p><span class="wpcf7-form-control-wrap email-820"><input type="email" name="email-820" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                            </p>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div id="submit">
+                                    <input type="submit" value="Connect me" class="wpcf7-form-control wpcf7-submit">
+                                    <a class="sign" href="">Sign in</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="book-demo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <section id="pop-up" class="try">
+                <div class="image">
+                    <img src="src/acetss/pop-up-try.png" alt="">
+                </div>
+                <div class="info">
+                    <div class="phone">
+                        <div class="button">
+                            <div class="button-img">
+                                <img src="src/acetss/icon_try.svg" alt="">
+                            </div>
+                        </div>
+                        <h2>Let's try</h2>
+                        <p class="subtitle">Everythig will start now</p>
+                    </div>
+                    <div class="get-started">
+                        <h2>Book a Demo</h2>
+                        <div class="form">
+                            <form>
+                                <div id="information">
+                                    <div class="one-input name">
+                                        <label>
+                                            <p class="title">First name</p>
+                                            <p><span class="wpcf7-form-control-wrap text"><input type="text" name="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                            </p>
+                                        </label>
+                                    </div>
+                                    <div class="one-input email">
+                                        <label>
+                                            <p class="title">Email</p>
+                                            <p><span class="wpcf7-form-control-wrap email-820"><input type="email" name="email-820" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                            </p>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="goal">
+                                    <p class="title">What is your goal?</p>
+                                    <div class="goals">
+                                        <div class="one-g">
+                                            <img src="src/acetss/items-icon.svg" alt="">
+                                            <p>Leads</p>
+                                        </div>
+                                        <div class="one-g">
+                                            <img src="src/acetss/items-icon.svg" alt="">
+                                            <p>Call Leads</p>
+                                        </div>
+                                        <div class="one-g">
+                                            <img src="src/acetss/items-icon.svg" alt="">
+                                            <p>Partnership</p>
+                                        </div>
+                                        <div class="one-g">
+                                            <img src="src/acetss/items-icon.svg" alt="">
+                                            <p>Traffic partner</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="submit">
+                                    <input type="submit" value="Connect me" class="wpcf7-form-control wpcf7-submit">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
+
 <section id="we-do"  >
     <div class="title-block">
         <h2>What Do We Do Exactly?</h2>
@@ -311,7 +444,10 @@
             <img src="src/acetss/logo 01.svg" alt="">
         </div>
         <div class="one-logo">
-            <img src="src/acetss/logo 05.svg" alt="">
+            <img src="src/acetss/logo 02.svg" alt="">
+        </div>
+        <div class="one-logo">
+            <img src="src/acetss/logo 03.svg" alt="">
         </div>
         <div class="one-logo">
             <img src="src/acetss/logo 04.svg" alt="">
@@ -320,7 +456,7 @@
             <img src="src/acetss/logo 05.svg" alt="">
         </div>
         <div class="one-logo">
-            <img src="src/acetss/logo 01.svg" alt="">
+            <img src="src/acetss/logo 06.svg" alt="">
         </div>
     </div>
 </section>
@@ -396,5 +532,45 @@
         </div>
     </div>
 </footer>
+
+
+
+<div class="container-fluid tabs">
+    <div class="tabs-menu">
+        <ul class="nav nav-tabs">
+            <li class="active">
+                <a data-toggle="tab" href="#description">Consumer privacy</a>
+            </li>
+            <li>
+                <a data-toggle="tab" href="#characteristics">Client privacy</a>
+            </li>
+            <li>
+                <a data-toggle="tab" href="#opinion">General</a>
+            </li>
+        </ul>
+    </div>
+    <div class="tab-content">
+        <div class="tab-pane active" id="description">
+            <h2 class="h4">Privacy Policy</h2>
+            <p>CustomerLab, Inc. ("CustomerLab") owns and operates a proprietary marketing technology platform. Using unique phone numbers with personalization components combined with database management, CustomerLab provides networks, advertisers, agencies, publishers (directly and indirectly "Clients"), and consumers with marketing automation services (the "Services"). Privacy is important to CustomerLab and any information that is collected or used is limited to what is necessary to create and maintain innovative and reliable Services without compromising the The use of information collected through CustomerLab Services shall be limited to the purpose of providing the service for which the Client has engaged CustomerLab, Inc.</p>
+            <p><strong>1. CONSUMER PRIVACY:</strong></p>
+            <p>What information does CustomerLab collect from consumers?</p>
+            <p><strong>Web Services:</strong></p>
+            <p>In general, when a consumer uses the CustomerLab services by visiting the website or by calling a unique phone number associated with one of our Clients, CustomerLab collects that consumerвЂ™s personal information if it is made available by the consumer or by a third party. This information includes limited personal data such as the callerвЂ™s name, address, phone number and email address. CustomerLab will not knowingly collect personal information from children under the age of eighteen.</p>
+            <p>CustomerLab or its Clients may also set up order forms, questionnaires or other mechanisms through which a consumer may be asked to provide certain information either online or via telephone or other communication medium. CustomerLab will collect such consumer-supplied information. If, however, such communications are initiated by one of CustomerLabвЂ™s Clients and the Client collects the information, CustomerLab cannot be responsible for that information, though CustomerLab does endeavor to ensure that its Clients maintain reasonable and appropriate privacy policies. Participation in any of these communications is purely voluntary; any consumer not wanting to participate or provide information may decline or terminate contact by navigating away from the web page or hanging up the phone.</p>
+            <p>When a consumer responds to or views an internet advertisement served by an CustomerLab Client or visits an CustomerLab website, CustomerLab sends one or more cookies to the consumerвЂ™s computer to uniquely identify that consumerвЂ™s browser. As is common practice of doing business on the Internet, CustomerLab uses cookies to improve the quality of the Services by storing user preferences and tracking user trends and also to determine how the Services are used and navigated. Cookies that CustomerLab services on third party websites only collect data in the aggregate. While many cookies are automatically deleted at the end of a web session, CustomerLab may use persistent cookies that remain on a specific browser after termination of a session. Any consumer may set their browser to refuse cookies or automatically clear cookies after termination of a session.</p>
+
+        </div>
+        <div class="tab-pane" id="characteristics">
+            <h2 class="h4">Client privacy</h2>
+            <p> For more information or if you have questions or concerns regarding the CustomerLab Privacy Policy, please contact legal@useCustomerLab.com or send correspondence to the following address: 9068406 Canada Inc, 925 De Maisonneuve Ouest, H3A0A5, Suite #335, Montreal, Quebec, Canada</p>
+        </div>
+        <div class="tab-pane" id="opinion">
+            <h2 class="h4">General</h2>
+            <p>CustomerLab or its Clients may also set up order forms, questionnaires or other mechanisms through which a consumer may be asked to provide certain information either online or via telephone or other communication medium. CustomerLab will collect such consumer-supplied information. If, however, such communications are initiated by one of CustomerLabвЂ™s Clients and the Client collects the information, CustomerLab cannot be responsible for that information, though CustomerLab does endeavor to ensure that its Clients maintain reasonable and appropriate privacy policies. Participation in any of these communications is purely voluntary; any consumer not wanting to participate or provide information may decline or terminate contact by navigating away from the web page or hanging up the phone.</p>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
