--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -1,3 +1,7 @@
+<style>
+    @import "bundle.1801ffc1a485c1b16c6b.css";
+
+</style>
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,6 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Webpack start</title>
 </head>
 <body>
