--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Webpack start</title>
 </head>
 <body>
@@ -21,30 +23,29 @@
             <ul>
                 <li><a href="">Services</a>
                     <ul>
-                        <li>
-                            <a href="#">
-                                Live Leads
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Live Calls
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Managed Services
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                SaaS
-                            </a>
-                        </li>
+                        <li><a href="#">Live Leads</a></li>
+                        <li><a href="#">Live Calls</a></li>
+                        <li><a href="#">Managed Services</a></li>
+                        <li><a href="#">SaaS</a></li>
                     </ul>
                 </li>
-                <li><a href="insurance.html">Industries</a></li>
-                <li><a href="">Partners</a></li>
+                <li>
+                    <a href="#">Industries</a>
+                    <ul>
+                        <li><a href="#">Insurance</a></li>
+                        <li><a href="#">Consumer Finance</a></li>
+                        <li><a href="#">Local Services</a></li>
+                        <li><a href="#">Your industri</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Partners</a>
+                    <ul>
+                        <li><a href="#">Traffic Partners</a></li>
+                        <li><a href="#">Business Partners</a></li>
+                        <li><a href="#">Marketplace Partners </a></li>
+                    </ul>
+                </li>
                 <li><a href="">Contact us</a></li>
             </ul>
         </nav>
@@ -71,7 +72,7 @@
                 <p>CustomerLab is the best affiliate network to get new clients.CustomerLab is the best affiliate network to get new clients.</p>
             </div>
             <div class="buttons">
-                <a class="s-v-button" data-toggle="modal" data-target="#get-started" >Get Started</a>
+                <a class="s-v-button active" data-toggle="modal" data-target="#get-started" >Get Started</a>
                 <a class="s-v-button" data-toggle="modal" data-target="#book-demo" >Book A Demo</a>
             </div>
         </div>
