--- a/src/insurance.html
+++ b/src/insurance.html
@@ -1,4 +1,4 @@
-
+<style> @import "bundle.790d704530bc62933028.css  "; </style>
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Webpack start</title>
 </head>
 <body>
@@ -54,7 +56,13 @@
         </div>
     </div>
 </header>
+
 <section id="industries_top" class="v-1110">
+    <div id="breadcrumbs">
+        <a href="#">Home</a><span>/</span>
+        <a href="#">Industries</a><span>/</span>
+        <a href="#">Insurance</a>
+    </div>
     <div class="img-block">
         <img src="src/acetss/img/industries-top-img.svg" alt="">
     </div>
