--- a/src/liveLeads.html
+++ b/src/liveLeads.html
@@ -1,4 +1,4 @@
-
+<style> @import "bundle.790d704530bc62933028.css  "; </style>
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Webpack start</title>
 </head>
 <body>
@@ -728,13 +730,6 @@
         </div>
     </section>
 </section>
-
-
-
-
-
-
-
 <section id="ready_to_scale_l">
     <h2>All done through direct API integration - Automate your inbound process, lower costs, and boost ROI.</h2>
     <div>
