before clone commit

--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -1,6 +1,5 @@
 <style>
-    @import "bundle.1801ffc1a485c1b16c6b.css";
-
+    @import "bundle.347e8ecbd51783158978.css";
 </style>
 <!doctype html>
 <html lang="en">
@@ -18,44 +17,50 @@
 <body>
 
 
-<header>
+<header class="home-page">
     <div class="v-1110 ">
         <div class="logo">
-            CustomerLab
+            <a href="http://test_task.iweb.cv.ua/">
+                CustomerLab
+            </a>
         </div>
         <nav class="menu">
             <ul>
                 <li><a href="">Services</a>
                     <ul>
-                        <li>
-                            <a href="#">
-                                Live Leads
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Live Calls
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Managed Services
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                SaaS
-                            </a>
-                        </li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveLeads.html">Live Leads</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveCalls.html">Live Calls</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/managedServices.html">Managed Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/saas.html">SaaS</a></li>
                     </ul>
                 </li>
-                <li><a href="insurance.html">Industries</a></li>
-                <li><a href="">Partners</a></li>
-                <li><a href="">Contact us</a></li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/insurance.html">Industries</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Insurance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Consumer Finance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Local Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Your industri</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/Publishers.html">Partners</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Traffic Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Business Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Marketplace Partners </a></li>
+                    </ul>
+                </li>
+                <li><a href="http://test_task.iweb.cv.ua/contactUs.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="button">
             <a href="">Sign in</a>
+        </div>
+        <div class="toggle">
+            <div class="menu-icon-wrapper icon-hamburger">
+                <div class="menu-icon"></div>
+            </div>
         </div>
     </div>
 </header>
@@ -70,7 +75,7 @@
                 </div>
                 <div class="one">
                     <img src="src/acetss/img/mail.svg" alt="">
-                    <p><a href="mailto:sofkazaika@gmail.com">sofkazaika@gmail.com</a></p>
+                    <p><a href="mailto:sofkazaika@gmail.com">sofia@gmail.com</a></p>
                 </div>
                 <div class="one">
                     <img src="src/acetss/img/place.svg" alt="">
@@ -102,14 +107,14 @@
                             <div class="one-input name">
                                 <label>
                                     <p class="title">First name</p>
-                                    <p><span class="wpcf7-form-control-wrap text"><input type="text" name="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                    <p><span class="wpcf7-form-control-wrap text"><input type="text" name="text" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="sofia@gmail.com"></span>
                                     </p>
                                 </label>
                             </div>
                             <div class="one-input email">
                                 <label>
                                     <p class="title">Email</p>
-                                    <p><span class="wpcf7-form-control-wrap email-820"><input type="email" name="email-820" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="sofkazaika@gmail.com"></span>
+                                    <p><span class="wpcf7-form-control-wrap email-820"><input type="email" name="email-820" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="sofia@gmail.com"></span>
                                     </p>
                                 </label>
                             </div>
