--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Webpack start</title>
 </head>
 <body>
@@ -17,36 +16,38 @@
 <header class="home-page">
     <div class="v-1110 ">
         <div class="logo">
-            CustomerLab
+            <a href="http://test_task.iweb.cv.ua/">
+                CustomerLab
+            </a>
         </div>
         <nav class="menu">
             <ul>
                 <li><a href="">Services</a>
                     <ul>
-                        <li><a href="#">Live Leads</a></li>
-                        <li><a href="#">Live Calls</a></li>
-                        <li><a href="#">Managed Services</a></li>
-                        <li><a href="#">SaaS</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveLeads.html">Live Leads</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveCalls.html">Live Calls</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/managedServices.html">Managed Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/saas.html">SaaS</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Industries</a>
+                    <a href="http://test_task.iweb.cv.ua/insurance.html">Industries</a>
                     <ul>
-                        <li><a href="#">Insurance</a></li>
-                        <li><a href="#">Consumer Finance</a></li>
-                        <li><a href="#">Local Services</a></li>
-                        <li><a href="#">Your industri</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Insurance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Consumer Finance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Local Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Your industri</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="http://test_task.iweb.cv.ua/Publishers.html">Partners</a>
                     <ul>
-                        <li><a href="#">Traffic Partners</a></li>
-                        <li><a href="#">Business Partners</a></li>
-                        <li><a href="#">Marketplace Partners </a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Traffic Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Business Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Marketplace Partners </a></li>
                     </ul>
                 </li>
-                <li><a href="">Contact us</a></li>
+                <li><a href="http://test_task.iweb.cv.ua/contactUs.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="button">
@@ -243,7 +244,25 @@
     <div class="real-demand-row">
         <div class="first-row">
             <div class="image">
-                <img src="src/acetss/img/demand-img1.svg" alt="">
+<!--                <img src="src/acetss/img/demand-img1.svg" alt="">-->
+
+                <div class="bg-image">
+                    <img src="src/acetss/img/phone-img.svg" alt="">
+                </div>
+                <div class="content">
+                    <div class="one-sms">
+                        <img src="src/acetss/img/one-message3.svg" alt="">
+                    </div>
+                    <div class="one-sms">
+                        <img src="src/acetss/img/one-message.svg" alt="">
+                    </div>
+                    <div class="one-sms">
+                        <img src="src/acetss/img/one-message1.svg" alt="">
+                    </div>
+                    <div class="one-sms">
+                        <img src="src/acetss/img/one-message2.svg" alt="">
+                    </div>
+                </div>
             </div>
             <div class="info">
                 <span class="number">01</span>
@@ -262,7 +281,33 @@
                 </div>
             </div>
             <div class="image">
-                <img src="src/acetss/img/demand-img2.svg" alt="">
+                <div class="animation_image">
+                    <div class="first-icon">
+                        <img src="src/acetss/img/circle2.png" alt="">
+                    </div>
+                    <div class="second-icon">
+                        <img src="src/acetss/img/circle3.png" alt="">
+                    </div>
+                    <div class="third-icon">
+                        <img src="src/acetss/img/circle1.png" alt="">
+                    </div>
+                    <div class="fourth-icon">
+                        <img src="src/acetss/img/circle4.png" alt="">
+                    </div>
+                    <div class="element">
+
+                            <div class="circl"></div>
+                            <div class="circl2"></div>
+                            <div class="line line-1"></div>
+                            <div class="line line-2"></div>
+                            <div class="line line-3"></div>
+                            <div class="line line-4"></div>
+
+                    </div>
+                </div>
+
+
+                <!--                <img src="src/acetss/img/demand-img2.svg" alt="">-->
             </div>
         </div>
     </div>
@@ -392,18 +437,18 @@
     </div>
 </section>
 <section id="ready">
-    <h2>Ready to Get Started?</h2>
-    <div class="ready-buttons-block">
-        <a href="#">
-            I’m a Traffic Partner
-        </a>
-        <a href="#">
-            I’m a Business, I need leads!
-        </a>
-        <a href="#">
-            I’m a Platform, I would love to learn more!
-        </a>
-    </div>
+<h2>Ready to Get Started?</h2>
+<div class="ready-buttons-block">
+    <a href="#">
+        I’m a Traffic Partner
+    </a>
+    <a href="#">
+        I’m a Business, I need leads!
+    </a>
+    <a href="#">
+        I’m a Platform, I would love to learn more!
+    </a>
+</div>
 </section>
 <footer>
     <div class="menus-block">
@@ -459,7 +504,7 @@
     <div class="last-block">
         <p class="all-r-r">© 2020 CustomerLab - All rights reserved</p>
         <div class="privacy">
-            <a href="">Terms & Conditions</a> & <a href="">Privacy Policy</a>
+            <a href="/privacyPolicy.html">Terms & Conditions</a> & <a href="/privacyPolicy.html">Privacy Policy</a>
         </div>
     </div>
 </footer>
