--- a/src/Publishers.html
+++ b/src/Publishers.html
@@ -1,4 +1,6 @@
-<style> @import "bundle.790d704530bc62933028.css  "; </style>
+<style>
+    @import "bundle.347e8ecbd51783158978.css";
+</style>
 <!doctype html>
 <html lang="en">
 <head>
@@ -15,48 +17,59 @@
 <body>
 
 
-<header>
+<header class="home-page">
     <div class="v-1110 ">
         <div class="logo">
-            CustomerLab
+            <a href="http://test_task.iweb.cv.ua/">
+                CustomerLab
+            </a>
         </div>
         <nav class="menu">
             <ul>
                 <li><a href="">Services</a>
                     <ul>
-                        <li>
-                            <a href="#">
-                                Live Leads
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Live Calls
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Managed Services
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                SaaS
-                            </a>
-                        </li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveLeads.html">Live Leads</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveCalls.html">Live Calls</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/managedServices.html">Managed Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/saas.html">SaaS</a></li>
                     </ul>
                 </li>
-                <li><a href="insurance.html">Industries</a></li>
-                <li><a href="">Partners</a></li>
-                <li><a href="">Contact us</a></li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/insurance.html">Industries</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Insurance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Consumer Finance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Local Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Your industri</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/Publishers.html">Partners</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Traffic Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Business Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Marketplace Partners </a></li>
+                    </ul>
+                </li>
+                <li><a href="http://test_task.iweb.cv.ua/contactUs.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="button">
             <a href="">Sign in</a>
         </div>
+        <div class="toggle">
+            <div class="menu-icon-wrapper icon-hamburger">
+                <div class="menu-icon"></div>
+            </div>
+        </div>
     </div>
 </header>
 <section id="industries_top_p" class="v-1110">
+    <div id="breadcrumbs">
+        <a href="#">Home</a><span>/</span>
+        <a href="#">Partners</a><span>/</span>
+        <a href="#">Insurance</a>
+    </div>
     <div class="img-block">
         <svg width="608" height="709" viewBox="0 0 608 709" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect opacity="0.15" y="13" width="509" height="578" rx="20" fill="url(#paint0_linear)"/>
