--- a/src/insurance.html
+++ b/src/insurance.html
@@ -1,4 +1,6 @@
-<style> @import "bundle.790d704530bc62933028.css  "; </style>
+<style>
+    @import "bundle.347e8ecbd51783158978.css";
+</style>
 <!doctype html>
 <html lang="en">
 <head>
@@ -15,44 +17,50 @@
 <body>
 
 
-<header>
+<header class="home-page">
     <div class="v-1110 ">
         <div class="logo">
-            CustomerLab
+            <a href="http://test_task.iweb.cv.ua/">
+                CustomerLab
+            </a>
         </div>
         <nav class="menu">
             <ul>
                 <li><a href="">Services</a>
                     <ul>
-                        <li>
-                            <a href="#">
-                                Live Leads
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Live Calls
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Managed Services
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                SaaS
-                            </a>
-                        </li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveLeads.html">Live Leads</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/liveCalls.html">Live Calls</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/managedServices.html">Managed Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/saas.html">SaaS</a></li>
                     </ul>
                 </li>
-                <li><a href="">Industries</a></li>
-                <li><a href="">Partners</a></li>
-                <li><a href="">Contact us</a></li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/insurance.html">Industries</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Insurance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Consumer Finance</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Local Services</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/insurance.html">Your industri</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="http://test_task.iweb.cv.ua/Publishers.html">Partners</a>
+                    <ul>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Traffic Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Business Partners</a></li>
+                        <li><a href="http://test_task.iweb.cv.ua/Publishers.html">Marketplace Partners </a></li>
+                    </ul>
+                </li>
+                <li><a href="http://test_task.iweb.cv.ua/contactUs.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="button">
             <a href="">Sign in</a>
+        </div>
+        <div class="toggle">
+            <div class="menu-icon-wrapper icon-hamburger">
+                <div class="menu-icon"></div>
+            </div>
         </div>
     </div>
 </header>
@@ -82,7 +90,7 @@
 <section id="industries_logos_block">
     <div class="logos_block">
         <img src="src/acetss/img/lendingtree.svg" alt="">
-        <img src="src/acetss/img/beyond.svg" alt="">
+        <img src="src/acetss/img/beyond-logo.png" alt="">
     </div>
 </section>
 <section id="industries_services">
